--- a/index.html
+++ b/index.html
@@ -22,10 +22,17 @@
             <div class="search__container">
                 <input class="search__input" type="text" placeholder="Search"><i class="fa-solid fa-magnifying-glass" id="search-btn"></i>
             </div>
+            <i class="fa-solid fa-magnifying-glass" id="search-btn-2"></i>
+            <span id="menu-1">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="25" viewBox="0 0 28 25" fill="none">
+                    <path d="M25.7895 20.5882C26.3572 20.5885 26.903 20.8067 27.3138 21.1977C27.7247 21.5886 27.9691 22.1223 27.9964 22.6881C28.0236 23.254 27.8317 23.8086 27.4604 24.2371C27.089 24.6655 26.5667 24.935 26.0017 24.9897L25.7895 25H2.21053C1.64284 24.9997 1.09702 24.7815 0.686167 24.3906C0.275316 23.9996 0.0309296 23.466 0.00364846 22.9001C-0.0236327 22.3343 0.168283 21.7797 0.539627 21.3512C0.910971 20.9227 1.43328 20.6532 1.99832 20.5985L2.21053 20.5882H25.7895ZM25.7895 10.2941C26.3757 10.2941 26.938 10.5265 27.3526 10.9402C27.7671 11.3539 28 11.915 28 12.5C28 13.085 27.7671 13.6461 27.3526 14.0598C26.938 14.4735 26.3757 14.7059 25.7895 14.7059H2.21053C1.62426 14.7059 1.062 14.4735 0.647448 14.0598C0.232894 13.6461 0 13.085 0 12.5C0 11.915 0.232894 11.3539 0.647448 10.9402C1.062 10.5265 1.62426 10.2941 2.21053 10.2941H25.7895ZM25.7895 0C26.3757 0 26.938 0.232405 27.3526 0.646088C27.7671 1.05977 28 1.62085 28 2.20588C28 2.79092 27.7671 3.35199 27.3526 3.76568C26.938 4.17936 26.3757 4.41176 25.7895 4.41176H2.21053C1.62426 4.41176 1.062 4.17936 0.647448 3.76568C0.232894 3.35199 0 2.79092 0 2.20588C0 1.62085 0.232894 1.05977 0.647448 0.646088C1.062 0.232405 1.62426 0 2.21053 0H25.7895Z" fill="black"/>
+                  </svg>
 
+            </span>
             <div id="left-icon">
-                <i class="fa-solid fa-bars" id="menu-1"></i>
-                <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="0 0 32 32" fill="none"
+                <!-- <i class="fa-solid fa-bars" id="menu-1"></i> -->
+
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="40" viewBox="0 0 32 32" fill="none"
                     id="message-1">
                     <g clip-path="url(#clip0_29_477)">
                         <path
@@ -39,7 +46,7 @@
                     </defs>
                 </svg>
 
-                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 38 38" fill="none"
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="35" viewBox="0 0 38 38" fill="none"
                     id="notify-1">
                     <g clip-path="url(#clip0_29_473)">
                         <path
@@ -56,7 +63,7 @@
                     </defs>
                 </svg>
 
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 70 70" fill="none"
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="50" viewBox="0 0 70 70" fill="none"
                     id="user-1">
                     <g clip-path="url(#clip0_29_479)">
                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -82,7 +89,7 @@
                                     d="M3 13.2373H11V3.23729H3V13.2373ZM3 21.2373H11V15.2373H3V21.2373ZM13 21.2373H21V11.2373H13V21.2373ZM13 3.23729V9.23729H21V3.23729H13Z"
                                     fill="#2F80ED" />
                             </svg><a href="#">Dashboard</a></li>
-                        <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="20" viewBox="0 0 24 20"
+                        <!-- <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="20" viewBox="0 0 24 20"
                                 fill="none">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                     d="M12.7071 1.91084C12.5196 1.75461 12.2652 1.66685 12.0001 1.66685C11.7349 1.66685 11.4806 1.75461 11.2931 1.91084L4.29308 7.74417L2.29308 9.41084C2.19757 9.48771 2.12139 9.57966 2.06898 9.68133C2.01657 9.783 1.98898 9.89235 1.98783 10.003C1.98668 10.1137 2.01198 10.2234 2.06226 10.3258C2.11254 10.4282 2.18679 10.5213 2.28069 10.5995C2.37458 10.6777 2.48623 10.7396 2.60913 10.7815C2.73202 10.8234 2.8637 10.8445 2.99648 10.8435C3.12926 10.8426 3.26048 10.8196 3.38249 10.7759C3.50449 10.7322 3.61483 10.6688 3.70708 10.5892L4.00008 10.345V15.8333C4.00008 16.4964 4.31615 17.1323 4.87876 17.6011C5.44137 18.0699 6.20443 18.3333 7.00008 18.3333H17.0001C17.7957 18.3333 18.5588 18.0699 19.1214 17.6011C19.684 17.1323 20.0001 16.4964 20.0001 15.8333V10.345L20.2931 10.5892C20.4817 10.741 20.7343 10.825 20.9965 10.8231C21.2587 10.8212 21.5095 10.7335 21.6949 10.579C21.8803 10.4245 21.9855 10.2155 21.9878 9.997C21.99 9.77851 21.8892 9.568 21.7071 9.41084L12.7071 1.91084Z"
@@ -122,7 +129,7 @@
                                         <rect width="24" height="24" fill="white" />
                                     </clipPath>
                                 </defs>
-                            </svg><a href="#">Updates</a></li>
+                            </svg><a href="#">Updates</a></li> -->
                         <li><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                 fill="none">
                                 <path
@@ -246,7 +253,7 @@
                             <h1 class="com-1">Recent Messages</h1>
             
                             <div class="com-2">
-                                <img src="./Pictures/Avatar Image-1.png" alt="img-1" class="av-1">
+                                <img src="./Pictures/Avatar Image-1.png" alt="img-1" class="av-1" width="50" height="50">
                                 <span class="text-1">
                                     <p class="nom-1">Theresa Webb</p>
                                     <p>Software development is a multifaceted process that involves the conception, design,
@@ -257,7 +264,7 @@
                                 </span>
                             </div>
                             <div class="com-2">
-                                <img src="./Pictures/Avatar Image-3.png" alt="img-1" class="av-1">
+                                <img src="./Pictures/Avatar Image-3.png" alt="img-1" class="av-1" width="50" height="50">
                                 <span class="text-1">
                                     <p class="nom-1">Justine</p>
                                     <p>Software development is a multifaceted process that involves the conception, design,
@@ -268,7 +275,7 @@
                                 </span>
                             </div>
                             <div class="com-2">
-                                <img src="./Pictures/Avatar Image.png" alt="img-1" class="av-1">
+                                <img src="./Pictures/Avatar Image.png" alt="img-1" class="av-1" width="50" height="50">
                                 <span class="text-1">
                                     <p class="nom-1">Obed</p>
                                     <p>Software development is a multifaceted process that involves the conception, design,
@@ -279,7 +286,7 @@
                                 </span>
                             </div>
                             <div class="com-2">
-                                <img src="./Pictures/Avatar Image.png" alt="img-1" class="av-1">
+                                <img src="./Pictures/Avatar Image.png" alt="img-1" class="av-1" width="50" height="50">
                                 <span class="text-1">
                                     <p class="nom-1">Micka</p>
                                     <p>Software development is a multifaceted process that involves the conception, design,
@@ -290,7 +297,7 @@
                                 </span>
                             </div>
                             <div class="com-2">
-                                <img src="./Pictures/About Me.png" alt="img-1" class="av-1">
+                                <img src="./Pictures/Avatar Image.png" alt="img-1" class="av-1" width="50" height="50">
                                 <span class="text-1">
                                     <p class="nom-1">Jamarie</p>
                                     <p>Software development is a multifaceted process that involves the conception, design,
